#0018090 added api for each service offer list and service request list